--- a/css/styles.css
+++ b/css/styles.css
@@ -10,38 +10,207 @@
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding: 0 32px;
   }
 }
 @media screen and (min-width: 1280px) {
   .container {
     max-width: 1280px;
+    padding: 0 100px;
   }
 }
 a {
   text-decoration: none;
 }
-.hero {
-  padding: 200px 15px;
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
+h1,
+h2,
+h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+}
+.sas {
+  background: linear-gradient(
+    to bottom,
+    #7a3145 0% 44.76%,
+    #576f35 44.76% 100%
+  );
+}
+/* .sas {
+  background: linear-gradient(to bottom, #7a3145 0 530px, #576f35 530px 1184px);
+} */
+.vav {
+  max-width: 375px;
+  height: 530px;
+  border: 20px solid black;
+  background-color: #7a3145;
+}
+.mom {
+  max-width: 375px;
+  height: 654px;
+  border: 20px solid blue;
   background-color: #576f35;
 }
-.header {
+.con-c {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  position: fixed;
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
-.logo {
-  fill: #fbfbfb;
+@media screen and (min-width: 768px) {
+  .vav {
+    width: 700px;
+    height: 840px;
+  }
+  .mom {
+    width: 700px;
+    height: 699px;
+  }
+  .sas {
+    background: linear-gradient(
+      to bottom,
+      #7a3145 0% 54.58%,
+      #576f35 54.58% 100%
+    );
+  }
+  /* .sas {
+    background: linear-gradient(
+      to bottom,
+      #7a3145 0 840px,
+      #576f35 840px 1539px
+    );
+  } */
 }
-.btn-menu {
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  width: 32px;
-  height: 32px;
+@media screen and (min-width: 1280px) {
+  .sas {
+    background: linear-gradient(
+      to right,
+      #7a3145 0% 44.76%,
+      #576f35 44.76% 100%
+    );
+  }
+  .con-c {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .mom {
+    width: 650px;
+    height: 650px;
+  }
+
+  .vav {
+    width: 650px;
+    height: 650px;
+  }
 }
-.icon-burger {
-  stroke: #fbfbfb;
+
+.vegetables-section {
+  background-color: #7a3145;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.section-title {
+  color: #fbfbfb;
+  font-family: "Inter Tight";
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 1.04;
+  letter-spacing: -0.72px;
+  text-transform: uppercase;
+  max-width: 335px;
+  margin-bottom: 20px;
+}
+.section-title span {
+  color: rgba(251, 251, 251, 0.3);
+}
+.vegetables-section-text {
+  color: #fbfbfb;
+  font-family: "Inter Tight";
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.28;
+  max-width: 335px;
+  margin-bottom: 40px;
+}
+.vegetables-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.vegetables-item {
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 32px 26px;
+  gap: 14px;
+  border-radius: 40px;
+  background-color: #fbfbfb;
+  max-width: 334px;
+}
+.vegetables-subtitle {
+  color: #7a3145;
+  font-family: "Inter Tight";
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 1;
+  letter-spacing: -0.42px;
+}
+.vegetables-text {
+  color: #141414;
+  font-family: "Inter Tight";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.28;
+  letter-spacing: -0.21px;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .section-title {
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 1;
+    letter-spacing: -0.96px;
+    text-transform: uppercase;
+    max-width: 508px;
+    margin-bottom: 25px;
+  }
+  .vegetables-section-text {
+    font-size: 16px;
+    max-width: 626px;
+    margin-bottom: 50px;
+  }
+  .vegetables-item {
+    width: calc((100% - 20px) / 2);
+  }
+  .vegetables-list {
+    row-gap: 28px;
+    column-gap: 20px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .vegetables-item {
+    width: calc((100% - 42px) / 3);
+  }
+  .vegetables-list {
+    column-gap: 21px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 374px) {
+  .section-title {
+    font-size: 42px;
+  }
 }
