--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,13 @@
   --green-background: #576f35;
   --red-background: #7a3145;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   color: var(--light-text-color);
   font-family: Inter tight, sans-serif;
+  background-color: var(--red-background);
 }
 
 a {
@@ -81,9 +84,14 @@ img {
 
 /* ===================================header================================= */
 .top {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   padding-top: 20px;
+  padding-bottom: 20px;
+  z-index: 100;
+  transition: background-color 250ms ease, opacity 250ms ease;
 }
 
 .header {
@@ -92,23 +100,37 @@ img {
   justify-content: space-between;
 }
 
-.logo-link {
+.logo-link-header {
   display: flex;
   align-items: center;
   gap: 4px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-icon,
 .logo-text {
   fill: var(--light-text-color);
 }
 
+.logo-link-header:hover .logo-icon,
+.logo-link-header:hover .logo-text,
+.logo-link-header:focus .logo-icon,
+.logo-link-header:focus .logo-text {
+  fill: rgb(13, 80, 32);
+}
+
 .btn-menu {
   border: none;
   background-color: transparent;
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-burger {
   stroke: var(--light-text-color);
+}
+
+.btn-menu:hover .icon-burger,
+.btn-menu:focus .icon-burger {
+  stroke: rgb(13, 80, 32);
 }
 
 .nav-container {
@@ -192,7 +214,7 @@ img {
   flex-direction: column;
   align-items: center;
   background-color: var(--red-background);
-  max-width: 375px;
+  width: 375px;
   height: 100%;
   padding: 240px 0 40px;
 }
@@ -203,6 +225,12 @@ img {
   position: absolute;
   top: 20px;
   right: 20px;
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close:hover .icon-close,
+.btn-close:focus .icon-close {
+  stroke: rgba(251, 251, 251, 0.3);
 }
 
 .icon-close {
@@ -268,6 +296,7 @@ img {
 @media screen and (min-width: 768px) {
   .top {
     padding-top: 32px;
+    background-color: rgb(87, 111, 53, 0.8);
   }
 
   .icon-burger {
@@ -275,7 +304,7 @@ img {
     height: 40px;
   }
 
-  .logo-link {
+  .logo-link-header {
     gap: 8px;
   }
 
@@ -789,10 +818,12 @@ img {
   border-radius: 40px;
   background-color: var(--light-text-color);
   max-width: 334px;
+  position: relative;
+  overflow: hidden;
+  transition: transform 250ms;
 }
 .vegetables-subtitle {
   color: #7a3145;
-
   font-size: 28px;
   font-weight: 600;
   line-height: 1;
@@ -800,13 +831,37 @@ img {
   margin-bottom: 12px;
 }
 .vegetables-text {
-  color: #141414;
+  color: var(--black-text-color);
   font-size: 14px;
   font-weight: 600;
   line-height: 1.28;
   letter-spacing: -0.21px;
   text-transform: uppercase;
   margin-bottom: 14px;
+}
+
+.vegetables-overlay {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 40px;
+  font-size: 20px;
+  line-height: 1.5;
+  color: var(--light-text-color);
+  padding: 140px 30px 30px;
+  background-color: rgb(87, 111, 53, 0.8);
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 50);
+}
+.vegetables-item:hover .vegetables-overlay {
+  transform: translatey(0);
+  border: 5px solid var(--green-background);
+}
+.vegetables-item:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (min-width: 768px) {
@@ -888,8 +943,11 @@ img {
   border-radius: 24px;
   border: 1px solid rgba(122, 49, 69, 0.3);
 }
+.reviews-item:first-child {
+  padding-right: 24px;
+}
 .reviews-item:nth-child(2),
-.reviews-item:nth-child(3) {
+.reviews-item:last-child {
   display: none;
 }
 .reviews-img {
@@ -1031,21 +1089,84 @@ img {
   font-weight: 500;
   line-height: 1.28;
   letter-spacing: -0.28px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .textarea {
   background-color: transparent;
   outline: transparent;
+  resize: none;
   border-radius: 15px;
   border: 1px solid rgba(20, 20, 20, 0.2);
   padding: 14px 0 0 16px;
   width: 100%;
   height: 91px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input::placeholder,
 .textarea::placeholder {
   color: #141414;
 }
 
+.label {
+  position: relative;
+}
+.label::before {
+  position: absolute;
+  top: 0;
+  left: 16px;
+  content: "Succes!";
+  color: #3cbc81;
+  font-family: "Inter Tight";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  display: none;
+}
+.input:valid ~ .label::before {
+  display: block;
+}
+.label::after {
+  position: absolute;
+  left: 16px;
+  content: "Invalid email, try again";
+  color: #e74a3b;
+  font-family: "Inter Tight";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  display: none;
+  width: 180px;
+}
+.label {
+  display: flex;
+}
+.input:invalid ~ .label::after {
+  display: block;
+}
+.input:placeholder-shown ~ .label::after {
+  display: none;
+}
+.input:valid {
+  border: 1px solid #3cbc81;
+}
+
+input:invalid {
+  border: 1px solid #e74a3b;
+}
+
+.input:focus,
+textarea:focus {
+  border: 1px solid #7a3145;
+}
+.input:not(:placeholder-shown),
+.textarea:not(:placeholder-shown) {
+  background-color: rgb(163, 193, 171, 0.2);
+}
+.input:placeholder-shown {
+  border: 1px solid rgba(20, 20, 20, 0.2);
+}
 .btn-form {
   border-radius: 30px;
   background-color: var(--green-background);
@@ -1060,6 +1181,11 @@ img {
   line-height: 1.28;
   letter-spacing: -0.21px;
   text-transform: uppercase;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-form:hover,
+.btn-form:focus {
+  background-color: rgb(13, 80, 32);
 }
 .covered-soc-container {
   display: flex;
@@ -1098,6 +1224,10 @@ img {
   line-height: 1.08;
   letter-spacing: -0.36px;
 }
+.soc-link:hover,
+.soc-link:focus {
+  text-decoration: underline;
+}
 .con-img {
   position: relative;
   border-radius: 15px;
@@ -1114,40 +1244,6 @@ img {
   border-radius: 15px;
   height: 100%;
   width: 100%;
-}
-
-.text-valid,
-.text-invalid {
-  font-size: 14px;
-  padding-left: 16px;
-  margin-top: -11px;
-  display: none;
-}
-
-.text-valid {
-  color: #3cbc81;
-}
-
-.inp:not(:placeholder-shown):invalid ~ .text-invalid {
-  display: block;
-}
-
-.text-invalid {
-  color: #e74a3b;
-}
-.inp:not(:placeholder-shown):valid ~ .text-valid {
-  display: block;
-}
-
-.text-valid {
-  color: #3cbc81;
-}
-.text-valid,
-.text-invalid {
-  font-size: 14px;
-  padding-left: 16px;
-  margin-top: -4px;
-  display: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -1251,13 +1347,18 @@ img {
   display: flex;
   flex-direction: column;
 }
-/* .footer-logo {
-  display: flex;
- } */
+
 .logo-link {
   display: flex;
   align-items: center;
   gap: 4px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.logo-link:hover .logo-icon,
+.logo-link:focus .logo-icon,
+.logo-link:hover .logo-text,
+.logo-link:focus .logo-text {
+  fill: rgba(251, 251, 251, 0.3);
 }
 .logo-icon,
 .logo-text {
@@ -1292,8 +1393,12 @@ img {
   line-height: 1;
   letter-spacing: 0.02em;
   text-transform: lowercase;
+  transition: font-size 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.footer-link:hover,
+.footer-link:focus {
+  font-size: 34px;
+}
 .footer-address {
   max-width: 179px;
 }
@@ -1310,8 +1415,13 @@ img {
   font-weight: 600;
   line-height: 1.3;
   letter-spacing: 0.01em;
+  transition: text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.footer-add:hover,
+.footer-add:focus {
+  text-decoration: underline;
+  /* color: rgba(251, 251, 251, 0.3); */
+}
 .footer-bottom-item {
   color: rgba(251, 251, 251, 0.5);
   font-family: "Inter Tight";
