--- a/css/styles.css
+++ b/css/styles.css
@@ -867,7 +867,7 @@ img {
   height: 100%;
   width: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 50);
+  transition: transform 250ms;
 }
 .vegetables-item:hover .vegetables-overlay {
   transform: translatey(0);
@@ -1364,22 +1364,22 @@ textarea:focus {
   flex-direction: column;
 }
 
-.logo-link {
+.logo-link-footer {
   display: flex;
   align-items: center;
   gap: 4px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* .logo-link:hover .logo-icon,
-.logo-linr:hover .logo-text,
-.logo-link:focus .logo-icon,
-.logo-link:focus .logo-text {
+.logo-link-footer:hover .logo-icon,
+.logo-linr-footer:hover .logo-text,
+.logo-link-footer:focus .logo-icon,
+.logo-link-footer:focus .logo-text {
   fill: var(--red-background);
 }
-.logo-link:hover {
+.logo-link-footer:hover {
   background-color: var(--light-text-color);
   border-radius: 13px;
-} */
+}
 
 .logo-icon,
 .logo-text {
@@ -1506,7 +1506,7 @@ textarea:focus {
     flex-direction: row;
     justify-content: space-between;
   }
-  .logo-link {
+  .logo-link-footer {
     gap: 8px;
   }
   .logo-icon {
