--- a/css/styles.css
+++ b/css/styles.css
@@ -104,18 +104,10 @@ img {
   display: flex;
   align-items: center;
   gap: 4px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-icon,
 .logo-text {
   fill: var(--light-text-color);
-}
-
-.logo-link-header:hover .logo-icon,
-.logo-link-header:hover .logo-text,
-.logo-link-header:focus .logo-icon,
-.logo-link-header:focus .logo-text {
-  fill: rgb(13, 80, 32);
 }
 
 .btn-menu {
@@ -296,7 +288,6 @@ img {
 @media screen and (min-width: 768px) {
   .top {
     padding-top: 32px;
-    /* background-color: rgb(87, 111, 53, 0.8); */
   }
 
   .icon-burger {
@@ -340,18 +331,10 @@ img {
 }
 
 @media screen and (min-width: 1280px) {
-  .logo-link-header:hover .logo-icon,
-  .logo-link-header:hover .logo-text,
-  .logo-link-header:focus .logo-icon,
-  .logo-link-header:focus .logo-text {
-    fill: var(--red-background);
-  }
-  .logo-link-header:hover {
-    background-color: var(--light-text-color);
-    border-radius: 13px;
-  }
   .logo-link-header {
-    padding: 12px;
+    padding: 16px;
+    border-radius: 12px;
+    background-color: rgb(87, 111, 53, 0.8);
   }
   .btn-menu {
     display: none;
@@ -603,9 +586,11 @@ img {
   align-items: center;
   background-color: var(--light-text-color);
   border-radius: 15px;
-  padding-left: 100px;
+  padding-left: 24px;
+  gap: 24px;
   max-width: 335px;
-  height: 76px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 .work-item:nth-child(1) {
@@ -620,11 +605,10 @@ img {
 
 .work-item::before {
   display: flex;
-  left: 24px;
   justify-content: center;
   align-items: center;
   content: counter(number);
-  position: absolute;
+  flex-shrink: 0;
   width: 52px;
   height: 52px;
   border-radius: 50%;
@@ -1237,9 +1221,7 @@ textarea:focus {
   font-weight: 600;
   line-height: 1.08;
   letter-spacing: -0.36px;
-}
-.soc-link-span {
-  margin-left: 12px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-link:hover,
 .soc-link:focus {
@@ -1447,7 +1429,8 @@ textarea:focus {
 }
 
 .footer-bottom-link,
-.footer-bottom-text {
+.footer-bottom-text,
+.footer-span {
   color: rgba(251, 251, 251, 0.5);
   font-family: "Inter Tight";
   font-size: 12px;
@@ -1455,14 +1438,6 @@ textarea:focus {
   line-height: 1.3;
   letter-spacing: -0.18px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-span {
-  margin-left: 8px;
-  color: rgba(251, 251, 251, 0.5);
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.1;
-  letter-spacing: -0.27px;
 }
 
 .footer-bottom-link:hover,
@@ -1481,9 +1456,6 @@ textarea:focus {
 }
 
 @media screen and (min-width: 320px) and (max-width: 374px) {
-  .footer-span {
-    margin-left: 0;
-  }
   .footer-bottom-list {
     gap: 3px;
   }
