--- a/css/styles.css
+++ b/css/styles.css
@@ -1209,9 +1209,7 @@ textarea:focus {
   gap: 12px;
   flex-wrap: wrap;
 }
-.soc-item {
-  display: flex;
-}
+
 .soc-link,
 .soc-link-span {
   color: #fbfbfb;
@@ -1222,6 +1220,9 @@ textarea:focus {
   line-height: 1.08;
   letter-spacing: -0.36px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.soc-link-span {
+  margin-left: 12px;
 }
 .soc-link:hover,
 .soc-link:focus {
